--- a/themes/next/source/css/_common/components/post/post-header.styl
+++ b/themes/next/source/css/_common/components/post/post-header.styl
@@ -1,5 +1,7 @@
 .posts-expand .post-header {
   font-size: $font-size-large;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 .posts-expand .post-title {
